--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_script:
   - haxelib git flixel-tools https://github.com/HaxeFlixel/flixel-tools
   - haxelib git flixel-demos https://github.com/HaxeFlixel/flixel-demos dev
   - haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons dev
-  - haxelib git flixel-ui https://github.com/HaxeFlixel/flixel-ui dev
-  - haxelib dev flixel .
+  - haxelib git flixel https://github.com/HaxeFlixel/flixel dev
+  - haxelib dev flixel-ui .
 
 script:
   - cd ./tests
